<resources>
    <string name="app_name">Travel App</string>
    <string name="intro_pic">Intro Picture</string>
    <string name="intro_title">Explore the<font color="#3F95EC">\n World</font> with us</string>
    <string name="sub_intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="location_title">Location</string>
    <string name="search_hint">Street, Address, City, …</string>
    <string name="search_btn">Search</string>
    <string name="see_all">See All</string>
    <string name="back_btn">Back</string>

    <string name="recommended">Recommended</string>
    <string name="recommended_title">Title</string>
    <string name="recommended_score">5</string>
    <string name="recommended_address">Address</string>
    <string name="recommended_price">$0</string>
    <string name="recommended_per_person">/ Person</string>

    <string name="popular">Popular Destination</string>
    <string name="popular_title">Title</string>
    <string name="popular_price">$0</string>
    <string name="popular_per_person">/ Person</string>
    <string name="popular_score">5</string>
    <string name="popular_address">Address</string>

    <string name="category_title">Title</string>

    <string name="detail_title">Title</string>
    <string name="detail_location">Location</string>
    <string name="detail_score">3</string>
    <string name="detail_min">- min</string>
    <string name="detail_duration">Duration</string>
    <string name="detail_0">0</string>
    <string name="detail_distance">Distance</string>
    <string name="detail_bed">Bed</string>
    <string name="detail_description">Description</string>
    <string name="detail_description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="detail_add_to_cart">Add to Cart</string>
    <string name="detail_price">$0</string>
    <string name="detail_per_person">/ Person</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Explorer</string>
    <string name="menu_cart">Bookmark</string>
    <string name="menu_profile">Profile</string>


    <string name="menu_admin_category">Category</string>
    <string name="menu_admin_banner">Banner</string>


    <string name="ticket_detail">Ticket Detail</string>
    <string name="ticket_id">Order ID: 123456</string>
    <string name="ticket_upcoming">Unpaid</string>
    <string name="ticket_title">Title</string>
    <string name="ticket_note">Show this ticket to your tour guide before departure.</string>
    <string name="ticket_tour_guide">Tour Guide</string>
    <string name="ticket_time">Time</string>
    <string name="ticket_trip_duration">Trip Duration</string>
    <string name="ticket_total_guest">Total Guest</string>
    <string name="ticket_payment">Pay now</string>

    <string name="admin_dashboard_title">Admin Dashboard</string>
    <string name="admin_dashboard_role">Role: Admin</string>
    <string name="admin_dashboard_btn_1">Location</string>
    <string name="admin_dashboard_btn_2">Category &amp; Banner</string>
    <string name="admin_dashboard_btn_3">Tour</string>
    <string name="admin_dashboard_btn_4">Booked</string>
    <string name="admin_dashboard_btn_5">Account</string>
    <string name="admin_dashboard_btn_6">Logout</string>
    <string name="admin_upload_btn">Upload</string>
    <string name="admin_choose_image_btn">Choose Image</string>

    <string name="admin_location_title">Location Management</string>
    <string name="admin_location_list">Location List</string>
    <string name="admin_location_create">Create new Location</string>
    <string name="admin_location_hint_txt">Please type a location</string>

    <string name="admin_category_title">Category Management</string>
    <string name="admin_category_list">Category List</string>
    <string name="admin_category_create">Create new Category</string>
    <string name="admin_category_name_hint_txt">Please type a name</string>

    <string name="admin_tour_title">Tour Management</string>
    <string name="admin_tour_list">Tour List</string>
    <string name="admin_tour_create">Create new Tour</string>
    <string name="admin_tour_title_hint_txt">Please type a title for tour</string>
    <string name="admin_tour_description_hint_txt">Please type a description for tour</string>
    <string name="admin_tour_duration_hint_txt">Duration for tour</string>
    <string name="admin_tour_price_hint_txt">Price for tour</string>
    <string name="admin_tour_date_hint_txt">Trip start date</string>
    <string name="admin_tour_time_hint_txt">Departure time</string>

    <string name="admin_banner_title">Banner Management</string>
    <string name="admin_banner_list">Banner List</string>
    <string name="admin_banner_create">Create new Banner</string>

    <string name="admin_ticket_title">Ticket Management</string>
    <string name="admin_ticket_price">Price</string>
    <string name="admin_ticket_time">Time</string>
    <string name="admin_ticket_date">Date</string>
    <string name="admin_ticket_created_at">Created At</string>

    <string name="admin_users_title">Account Management</string>
    <string name="admin_users_list">Account List</string>
    <string name="admin_users_create">Create new Account</string>

    <string name="admin_no_data_txt">No data to show</string>

    <string name="login_title">Login</string>
    <string name="login_intro_alt">Login picture</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_to_register">Don\'t have an account?</string>
    <string name="login_register_btn">Register</string>
    <string name="login_choose_role">Choose your role</string>

    <string name="register_title">Register</string>
    <string name="register_full_name">Full Name</string>
    <string name="register_email">Email</string>
    <string name="register_phone_number">Phone number</string>
    <string name="register_choose_avatar">Choose your avatar</string>
    <string name="register_avatar_alt">Avatar picture</string>
    <string name="register_to_login">Already have an account?</string>
    <string name="register_login_btn">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_title">Profile</string>
    <string name="profile_role">Customer</string>
    <string name="profile_username">Username</string>
    <string name="profile_full_name">Full Name</string>
    <string name="profile_note">Your personal information is always kept private and secure.</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone_number">Phone number</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_change_avatar">Change avatar</string>
    <string name="profile_logout">Logout</string>

    <string name="edit_profile_title">Edit User Profile</string>
    <string name="edit_profile_current_password">Current password</string>
    <string name="edit_profile_new_password">New password</string>
    <string name="edit_profile_re_password">Re-enter new password</string>
    <string name="admin_save_btn">Save</string>

    <string name="edit_change_title">Change Password</string>
    <string name="admin_submit_btn">Submit</string>
    <string name="login_change_btn">Here</string>
    <string name="login_to_change">Forget Password?</string>
    <string name="login_to_account">Account</string>
    <string name="edit_update_info">Update Personal Information</string>
    <string name="profile_update_information">Update Information</string>
    <string name="profile_ticket">Ticket</string>
    <string name="ticket_manage">Management Ticket</string>
    <string name="sub_title">Review your upcoming bookings below</string>
    <string name="all_tour_title">All Tours</string>
    <string name="menu_all_tour">All Tours</string>
</resources>