<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/bottom_btn1"
        android:title="@string/menu_home"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/menuFavorite"
        android:icon="@drawable/bottom_btn2"
        android:title="@string/menu_favorite"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/menuCart"
        android:icon="@drawable/bottom_btn3"
        android:title="@string/menu_cart"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/bottom_btn4"
        android:title="@string/menu_profile"
        app:cnb_backgroundColor="@color/blue"
        app:cnb_iconColor="@color/white" />
</menu>