<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context="com.mp.travel_app.Fragment.Admin.AdminEditUserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_title"
                android:textSize="24sp"
                android:textColor="@color/darkBlue"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/editFullnameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/profile_full_name"
                android:inputType="text"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="14dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/editPhoneNumberTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:layout_marginTop="16dp"
                android:hint="@string/profile_phone_number"
                android:inputType="phone"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="14dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/editEmailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:layout_marginTop="16dp"
                android:hint="@string/profile_email"
                android:inputType="textEmailAddress"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="14dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/editUsernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_border"
                android:hint="@string/profile_username"
                android:enabled="false"
                android:inputType="text"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="14dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/editCurrentPasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:layout_marginTop="16dp"
                android:hint="@string/edit_profile_current_password"
                android:inputType="textPassword"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="14dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/editNewPasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:layout_marginTop="16dp"
                android:hint="@string/edit_profile_new_password"
                android:inputType="textPassword"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="14dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/editRePasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:layout_marginTop="16dp"
                android:hint="@string/edit_profile_re_password"
                android:inputType="textPassword"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="14dp"
                android:paddingBottom="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editSelectImageBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/admin_choose_image_btn" />

            <ImageView
                android:id="@+id/editImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:src="@android:drawable/ic_menu_gallery" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editSaveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_background_5"
                android:text="@string/admin_save_btn"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>