<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mp.travel_app.Activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:contentDescription="@string/app_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/introBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/intro_pic"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/intro_pic" />

            <TextView
                android:id="@+id/introTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_title"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="43sp"
                android:textColor="@color/darkBlue"/>

            <TextView
                android:id="@+id/subIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_intro"
                android:textColor="@color/darkBlue"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:paddingHorizontal="50dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>