<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.User.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/back_white" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_btn"
            android:textColor="@color/darkBlue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/login_intro_alt"
            android:src="@drawable/login_intro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/login_intro" />

        <TextView
            android:id="@+id/textView19"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleContent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/loginContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/txtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_border"
                    android:ems="10"
                    android:hint="@string/register_full_name"
                    android:inputType="text"
                    android:paddingStart="14dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_border"
                    android:ems="10"
                    android:hint="@string/register_phone_number"
                    android:inputType="phone"
                    android:paddingStart="14dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_border"
                    android:ems="10"
                    android:hint="@string/register_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="14dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_border"
                    android:ems="10"
                    android:hint="@string/login_username"
                    android:inputType="text"
                    android:paddingStart="14dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints=""
                    android:background="@drawable/rounded_border"
                    android:ems="10"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:paddingStart="14dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="10dp"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnChooseAvatar"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/grey_bg_corner"
                    android:paddingStart="14dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="14dp"
                    android:paddingBottom="10dp"
                    android:text="@string/register_choose_avatar"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/userAvatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/register_avatar_alt"
                    tools:srcCompat="@tools:sample/avatars" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/blue_bg"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/register_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginContent">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register_to_login"
                    android:textColor="@color/darkBlue"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnToLogin"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:padding="2dp"
                    android:text="@string/register_login_btn"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>